# intern-works-invsibl-cloud

./: README.md
ragas-eval/: custom_demo.py  demo_ragas.py  documents.py  hello.py  main.py  multi_agent_custom.py  pyproject.toml  ragas_demo.py  score.csv
ragas-eval-final/: custom_demo.py  documents.py  hello.py  main.py  multi_agent.py  pyproject.toml  ragas_eval.py
sections/reading notes/: llm reasoning - cot - react.odt
vanna_demo/: hello.py  pyproject.toml  vanna_demo.py  vanna_main.py  vanna_mysql.py  vanna_openai.py
